Added Comments for functionality

--- a/Configurations.properties
+++ b/Configurations.properties
@@ -3,7 +3,7 @@ BROWSER=chrome
 
 
 #****UAT*****
-UAT_APP_URL=https://uat-push-web.abs-cbn.com/freshscoops
+UAT_APP_URL=https://uat-push-web.abs-cbn.com/
 
 #****DEV*****
 DEV_APP_URL=https://qa-push-web.abs-cbn.com/
